(feat) Add Auth0 requirements to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,14 @@
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
     <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
+    <!-- Auth0Lock script -->
+    <script src="//cdn.auth0.com/js/lock-9.1.min.js"></script>
   </head>
   <body>
     <div class="container"></div>
+
+    <!-- Setting the right viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </body>
   <script src="/index_bundle.js"></script>
 </html>
